Add settings page

--- a/src/server/views/shared/navigation.pug
+++ b/src/server/views/shared/navigation.pug
@@ -11,6 +11,8 @@ nav(class="main-nav")
             li
                 a(href="/chat") Chat
             li
+                a(href="/settings") Settings
+            li
                 form(action="/logout" method="post")
                     button(type="submit") Logout
     button(class="nav-toggler")
